# WhoGoverns

./: .gitignore  AGENT.md  GOVERNANCE.md  README.md  enrich_aliases.py  index.html  ingest_ministers.py  ingest_organisations.py  manifest.json  pyproject.toml  requirements.txt  transform_bodies.py  transform_relationships.py  validate.py
analysis/: 2026-07-20-retrodiction-special-administration.md
calibration/: boundary_set.json  confidence_log.csv
compiled/: graph.json
data/: bodies.json  budgets.json  duties.json  instruments.json  offices.json  person-roles.json  powers.json  provisions.json  relationships.json  sources.json  staffing.json  vetoes.json
docs/: 2026-07-05-claude-code-handoff-guide.md  2026-07-06-machineryofgovernment-comparison.md  2026-07-06-spiral-1-exit-assessment.md  2026-07-21-buildout-strategy-v0-1.md  README.md  decision-register.md  project-plan.md  review-template.md
issues/: breadcrumbs.md  build-environment.md  schema-decisions.md  source-gaps.md  uncertain-records.md
pipeline/: README.md  audit_duty_counterparty.py  audit_veto_strength.py  breadcrumbs.py  compile.py  enrich_aliases.py  extract.py  extract_competition_spine.py  extract_electricity_sibling.py  extract_gas_sibling.py  extract_infrastructure_siblings.py  extract_planning_dco.py  extract_planning_dco_bloom.py  extract_planning_dco_bloom2.py  extract_planning_env_bloom.py  extract_water_unmined.py  extract_wca1981_ne.py  extract_wia1991_cma_ccw.py  extract_wia1991_dwi.py  extract_wia1991_licence_veto.py  extract_wia1991_licensing.py  extract_wia1991_s16.py  store.py  (+20 more)
(+5528 files in other folders)
